--- a/BasicSwiftSample/BasicSwiftSample/Base.lproj/Main.storyboard
+++ b/BasicSwiftSample/BasicSwiftSample/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZs-Hu-vJ1">
-                                <rect key="frame" x="36" y="280" width="303" height="30"/>
+                                <rect key="frame" x="20" y="263" width="335" height="30"/>
                                 <color key="backgroundColor" red="0.92156862750000001" green="0.16862745100000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Check eligibility"/>
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="IUm-mT-BCi">
-                                <rect key="frame" x="36" y="160" width="303" height="100"/>
+                                <rect key="frame" x="20" y="160" width="335" height="83"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="200" id="dM3-Vu-D9j"/>
@@ -44,7 +44,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVi-7c-gBg">
-                                <rect key="frame" x="36" y="330" width="303" height="30"/>
+                                <rect key="frame" x="20" y="313" width="335" height="30"/>
                                 <color key="backgroundColor" red="0.92156862750000001" green="0.16862745100000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Reset state"/>
@@ -53,7 +53,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" scrollEnabled="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="YBs-i6-4bp">
-                                <rect key="frame" x="36" y="380" width="303" height="83"/>
+                                <rect key="frame" x="20" y="363" width="335" height="66.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" priority="250" constant="200" id="1qZ-Gg-P0f"/>
@@ -66,19 +66,19 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="5dI-IR-use" firstAttribute="centerX" secondItem="umy-xr-4Wn" secondAttribute="centerX" id="4ha-87-ZFm"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="YBs-i6-4bp" secondAttribute="trailing" constant="20" id="5mO-pY-ATb"/>
-                            <constraint firstItem="YBs-i6-4bp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="BO0-TN-mv3"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="IUm-mT-BCi" secondAttribute="trailing" constant="20" id="DK0-3F-6pF"/>
-                            <constraint firstItem="tVi-7c-gBg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="Hew-QU-T1D"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="WZs-Hu-vJ1" secondAttribute="trailing" constant="20" id="L0M-8m-3hL"/>
+                            <constraint firstItem="YBs-i6-4bp" firstAttribute="leading" secondItem="umy-xr-4Wn" secondAttribute="leading" constant="20" id="BO0-TN-mv3"/>
+                            <constraint firstItem="tVi-7c-gBg" firstAttribute="leading" secondItem="umy-xr-4Wn" secondAttribute="leading" constant="20" id="Hew-QU-T1D"/>
                             <constraint firstItem="WZs-Hu-vJ1" firstAttribute="top" secondItem="IUm-mT-BCi" secondAttribute="bottom" constant="20" id="S8h-uK-9T9"/>
+                            <constraint firstItem="YBs-i6-4bp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YuH-B0-ggl"/>
                             <constraint firstItem="IUm-mT-BCi" firstAttribute="top" secondItem="5dI-IR-use" secondAttribute="bottom" constant="20" id="Zxc-ZG-hlF"/>
+                            <constraint firstItem="WZs-Hu-vJ1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="biy-wD-u8K"/>
+                            <constraint firstItem="tVi-7c-gBg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dAQ-p8-1tT"/>
                             <constraint firstItem="tVi-7c-gBg" firstAttribute="top" secondItem="WZs-Hu-vJ1" secondAttribute="bottom" constant="20" id="gze-AI-HbZ"/>
                             <constraint firstItem="YBs-i6-4bp" firstAttribute="top" secondItem="tVi-7c-gBg" secondAttribute="bottom" constant="20" id="ho0-m8-Uek"/>
                             <constraint firstItem="5dI-IR-use" firstAttribute="top" secondItem="umy-xr-4Wn" secondAttribute="top" constant="50" id="kJI-hz-eyM"/>
-                            <constraint firstItem="WZs-Hu-vJ1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="lGQ-jj-KB8"/>
-                            <constraint firstItem="IUm-mT-BCi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="zaG-DU-J6a"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="tVi-7c-gBg" secondAttribute="trailing" constant="20" id="zxP-PB-lsp"/>
+                            <constraint firstItem="WZs-Hu-vJ1" firstAttribute="leading" secondItem="umy-xr-4Wn" secondAttribute="leading" constant="20" id="lGQ-jj-KB8"/>
+                            <constraint firstItem="IUm-mT-BCi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vSC-6h-an3"/>
+                            <constraint firstItem="IUm-mT-BCi" firstAttribute="leading" secondItem="umy-xr-4Wn" secondAttribute="leading" constant="20" id="zaG-DU-J6a"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="umy-xr-4Wn"/>
                     </view>
